[gd_scene load_steps=3 format=3 uid="uid://dttyij5w5h0nc"]

[ext_resource type="Script" path="res://addons/chicken_scratch/graph/VariableValue.gd" id="1_0xd0h"]
[ext_resource type="Texture2D" uid="uid://d28uo12v6av0s" path="res://addons/chicken_scratch/icons/trash.svg" id="2_alw80"]

[node name="VariableValue" type="HBoxContainer" node_paths=PackedStringArray("variable_name", "type_button", "value_container", "string_value", "int_value", "float_value", "bool_value")]
offset_right = 388.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_0xd0h")
variable_name = NodePath("Variable")
type_button = NodePath("MenuButton")
value_container = NodePath("ValueContainer")
string_value = NodePath("ValueContainer/StringValue")
int_value = NodePath("ValueContainer/IntValue")
float_value = NodePath("ValueContainer/FloatValue")
bool_value = NodePath("ValueContainer/BoolValue")

[node name="Delete" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_alw80")

[node name="MenuButton" type="OptionButton" parent="."]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "String"
popup/item_0/id = 0
popup/item_1/text = "Int"
popup/item_1/id = 1
popup/item_2/text = "Float"
popup/item_2/id = 2
popup/item_3/text = "Bool"
popup/item_3/id = 3

[node name="Variable" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "<variable_name>"
alignment = 1

[node name="ValueContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="StringValue" type="LineEdit" parent="ValueContainer"]
layout_mode = 2
placeholder_text = "text"

[node name="IntValue" type="SpinBox" parent="ValueContainer"]
visible = false
layout_mode = 2
min_value = -2.14748e+09
max_value = 2.14748e+09
rounded = true

[node name="FloatValue" type="SpinBox" parent="ValueContainer"]
visible = false
layout_mode = 2
step = 0.0

[node name="BoolValue" type="CheckBox" parent="ValueContainer"]
visible = false
layout_mode = 2

[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="item_selected" from="MenuButton" to="." method="_on_menu_button_item_selected"]
[connection signal="text_changed" from="Variable" to="." method="_on_variable_name_changed"]
[connection signal="text_changed" from="ValueContainer/StringValue" to="." method="_on_string_value_text_changed"]
[connection signal="value_changed" from="ValueContainer/IntValue" to="." method="_on_int_value_value_changed"]
[connection signal="value_changed" from="ValueContainer/FloatValue" to="." method="_on_float_value_value_changed"]
[connection signal="pressed" from="ValueContainer/BoolValue" to="." method="_on_bool_value_pressed"]
